[gd_scene load_steps=4 format=3 uid="uid://rew64mf6uycr"]

[ext_resource type="Script" path="res://scenes/ui/health_bar/health_bar.gd" id="1_yvlwn"]
[ext_resource type="Texture2D" uid="uid://pkw01dkksdvg" path="res://assets/ui/Lifeicon.png" id="2_o3iu5"]
[ext_resource type="Texture2D" uid="uid://8ty5is256cm7" path="res://assets/ui/rounded_rect_45x45x15.png" id="3_e5pl5"]

[node name="HealthBar" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_yvlwn")

[node name="GettingOldTimer" type="Timer" parent="."]
autostart = true

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -434.0
offset_top = -16.0
offset_right = 434.0
offset_bottom = 48.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_o3iu5")
expand_mode = 1
stretch_mode = 5

[node name="HealthProgressBar" type="TextureProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.5
nine_patch_stretch = true
stretch_margin_left = 15
stretch_margin_top = 15
stretch_margin_right = 15
stretch_margin_bottom = 15
texture_under = ExtResource("3_e5pl5")
texture_progress = ExtResource("3_e5pl5")
tint_under = Color(0.929412, 0.835294, 0.698039, 1)
tint_progress = Color(0.160784, 0.192157, 0.298039, 1)
